--- a/AmazonLinux2023-former2.yaml
+++ b/AmazonLinux2023-former2.yaml
@@ -57,7 +57,7 @@ Metadata:
       vpcID:
         default: "VPC with outbound internet connectivity"
       subnetID:
-        default: "Subnet with outbound internet connectivity"
+        default: "Subnet in selected VPC with outbound internet connectivity"
       displayPublicIP:
         default: "EC2 in public subnet with public IP assigned?"
       assignStaticIP:
@@ -89,7 +89,7 @@ Parameters:
     Type: String
     Description: https://console.aws.amazon.com/ec2/#InstanceTypes
     AllowedPattern: "^[a-z\\-\\d\\.]+$"
-    Default: t4g.xlarge
+    Default: m6g.xlarge
 
   vpcID:
     Type: AWS::EC2::VPC::Id
@@ -134,7 +134,7 @@ Parameters:
     Description: https://docs.aws.amazon.com/ebs/latest/userguide/volume_constraints.html
     MinValue: 10
     MaxValue: 16384
-    Default: 10
+    Default: 15
   volumeType:
     Type: String
     Description: https://docs.aws.amazon.com/ebs/latest/userguide/ebs-volume-types.html
@@ -311,8 +311,8 @@ Resources:
                   NotIpAddress:
                     aws:SourceIp: 0.0.0.0/0
       ManagedPolicyArns:
-        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore"
-        - !Sub "arn:${AWS::Partition}:iam::aws:policy/ReadOnlyAccess"
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/ReadOnlyAccess
       Tags:
         - Key: StackName
           Value: !Ref AWS::StackName
@@ -537,9 +537,6 @@ Resources:
             "/opt/dcv-post-reboot.sh":
               content: !Sub |
                 #!/bin/bash
-                #sysctl -w net.ipv6.conf.all.disable_ipv6=1
-                #sysctl -w net.ipv6.conf.default.disable_ipv6=1
-
                 /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ec2Instance --region ${AWS::Region}
 
                 dnf update -q -y
@@ -550,9 +547,6 @@ Resources:
                 chmod +x /etc/smart-restart-conf.d/0-pre-restart
                 touch /etc/smart-restart-conf.d/0-post-restart
                 chmod +x /etc/smart-restart-conf.d/0-post-restart
-
-                #sysctl -w net.ipv6.conf.all.disable_ipv6=0
-                #sysctl -w net.ipv6.conf.default.disable_ipv6=0
 
                 systemctl enable dcv-virtual-session && systemctl restart dcv-virtual-session
                 systemctl enable dcvserver && systemctl restart dcvserver
@@ -568,6 +562,11 @@ Resources:
                 #!/bin/bash
                 mkdir -p /tmp/cfn
                 cd /tmp/cfn
+
+                # Change password
+                PWD=$(cat /var/lib/cloud/data/instance-id)
+                USER=ec2-user
+                echo "$USER:$PWD" | chpasswd
 
                 # Update OS
                 dnf clean all
@@ -591,6 +590,9 @@ Resources:
                 # USB and GPU driver DKMS
                 dnf install -q -y dkms
                 systemctl enable dkms
+
+                # block kernel 6.1 packages on kernel 6.12
+                sed -i '$aexclude=kernel-6.1.* kernel-headers-6.1.* kernel-devel-6.1.* kernel-modules-extra-common-6.1.* kernel-modules-extra-6.1.*' /etc/dnf/dnf.conf
 
                 # Kernel headers for GPU and USB remotization
                 dnf install -q -y kernel-devel-$(uname -r)
@@ -628,10 +630,13 @@ Resources:
                 # Disable the Wayland protocol: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-prereq.html#linux-prereq-wayland
                 sed -i '/^\[daemon\]/a WaylandEnable=false' /etc/gdm/custom.conf
 
+                # Microphone redirection: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-server.html
+                dnf install -q -y pulseaudio-utils
+
                 # DCV: https://docs.aws.amazon.com/dcv/latest/adminguide/setting-up-installing-linux-server.html
                 rpm --import https://d1uj6qtbmh3dt5.cloudfront.net/NICE-GPG-KEY
                 curl -s -L -O https://d1uj6qtbmh3dt5.cloudfront.net/nice-dcv-amzn2023-$(arch).tgz
-                tar -xvzf nice-dcv-amzn2023-$(arch).tgz && cd nice-dcv-*-amzn2023-$(arch)
+                tar -xzf nice-dcv-amzn2023-$(arch).tgz && cd nice-dcv-*-amzn2023-$(arch)
                 dnf install -q -y ./nice-dcv-server-*.rpm
                 dnf install -q -y ./nice-dcv-web-viewer-*.rpm
                 dnf install -q -y ./nice-xdcv-*.rpm
@@ -682,7 +687,7 @@ Resources:
       InstanceType: !Ref instanceType
       IamInstanceProfile: !Ref instanceProfile
       SubnetId: !Ref subnetID
-      Monitoring: true
+      Monitoring: false
       EbsOptimized: true
       SecurityGroupIds:
         - !Ref securityGroup
@@ -782,7 +787,7 @@ Outputs:
   EC2console:
     Description: EC2 console
     Value: !Sub
-      - "https://${AWS::Region}.${url}/ec2/home?region=${AWS::Region}#Instances:search=${ec2Instance}"
+      - "https://${AWS::Region}.${url}/ec2/home?region=${AWS::Region}#InstanceDetails:instanceId=${ec2Instance}"
       - url:
           !FindInMap [
             ConsoleUrl,
@@ -803,6 +808,10 @@ Outputs:
             url,
             DefaultValue: "console.aws.amazon.com",
           ]
+
+  EC2InstanceID:
+    Description: Instance ID
+    Value: !Ref ec2Instance
 
   EC2serialConsole:
     Description: EC2 Serial Console
@@ -832,7 +841,7 @@ Outputs:
         }
 
   SSMsessionManager:
-    Description: SSM Session Manager ("sudo passwd ec2-user" to change password)
+    Description: SSM Session Manager (" sudo passwd ec2-user " to change password)
     Value: !Sub
       - "https://${AWS::Region}.${url}/systems-manager/session-manager/${ec2Instance}"
       - url:
@@ -846,7 +855,7 @@ Outputs:
   DCVwebConsole:
     Description: DCV web browser client (login as ec2-user)
     Value: !Sub
-      - "https://${IpAddress}:8443"
+      - "https://${IpAddress}:8443/?username=ec2-user     ( dcv://ec2-user:@${IpAddress}:8443 )"
       - IpAddress:
           !If [
             displayPublicIP,
@@ -855,5 +864,5 @@ Outputs:
           ]
 
   GetIAMcreds:
-    Description: Command to retrieve IAM credentials for http://localhost/#section-setup-credentials
+    Description: Command to retrieve IAM credentials for https://former2.com/#section-setup-credentials
     Value: !Sub 'TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 30"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/iam/security-credentials/${instanceIamRole}'
